# group-manager2

./: .gitignore  LICENSE  README.md
app/src/: main.jsx
python/: pyproject.toml
python/backend/src/: dependencies.py  main.py  models.py  routers.py
python/backend/src/auth/: models.py  router.py  schemas.py  service.py  settings.py
python/backend/src/core/: config.py  settings.py
python/bot/: main.py
python/bot/core/: config.py  settings.py
python/bot/handlers/: app.py  start.py
python/bot/keyboards/: app_keyboard.py
